--- a/package.json
+++ b/package.json
@@ -4,14 +4,30 @@
   "license": "MIT",
   "scripts": {},
   "private": true,
-  "dependencies": {},
+  "dependencies": {
+    "tslib": "^2.0.0",
+    "rxjs": "^7.3.1"
+  },
   "devDependencies": {
     "@nrwl/cli": "12.9.0",
+    "@nrwl/eslint-plugin-nx": "12.9.0",
+    "@nrwl/jest": "12.9.0",
+    "@nrwl/linter": "12.9.0",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/tao": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
+    "@types/prompt": "^1.1.1",
+    "@typescript-eslint/eslint-plugin": "~4.28.3",
+    "@typescript-eslint/parser": "~4.28.3",
+    "eslint": "7.22.0",
+    "eslint-config-prettier": "8.1.0",
+    "jest": "27.0.3",
     "prettier": "^2.3.1",
+    "prompt": "^1.2.0",
+    "ts-jest": "27.0.3",
+    "ts-node": "^10.2.1",
     "typescript": "~4.3.5"
   }
 }
