--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,9 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@derxjs/view-model": ["packages/view-model/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
