--- a/packages/reducer/package.json
+++ b/packages/reducer/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "@derxjs/view-model",
+  "name": "@derxjs/reducer",
   "version": "1.0.20",
-  "description": "Official library for the DeRxJS Pattern",
+  "description": "Reducer util library for DeRxJSViewModel Pattern",
+  "main": "dist/packages/reducer/index.js",
   "scripts": {
-    "test": "nx test view-model"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -11,8 +12,7 @@
   },
   "keywords": [
     "rxjs",
-    "state",
-    "management"
+    "state-management"
   ],
   "author": "Zack DeRose",
   "license": "MIT",
@@ -20,8 +20,8 @@
     "url": "https://github.com/ZackDeRose/derxjs/issues"
   },
   "homepage": "https://github.com/ZackDeRose/derxjs#readme",
-  "types": "index.ts",
   "dependencies": {
-    "rxjs": "^7.3.1"
+    "rxjs": "^7.3.1",
+    "typescript": "^4.4.3"
   }
 }
