--- a/package.json
+++ b/package.json
@@ -3,29 +3,62 @@
   "version": "1.0.24",
   "license": "MIT",
   "scripts": {
-    "publish-packages": "npx ts-node tools/scripts/publish-all.ts"
+    "publish-packages": "npx ts-node tools/scripts/publish-all.ts",
+    "postinstall": "ngcc --properties es2015 browser module main"
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^12.2.0",
+    "@angular/common": "^12.2.0",
+    "@angular/compiler": "^12.2.0",
+    "@angular/core": "^12.2.0",
+    "@angular/forms": "^12.2.0",
+    "@angular/platform-browser": "^12.2.0",
+    "@angular/platform-browser-dynamic": "^12.2.0",
+    "@angular/router": "^12.2.0",
+    "@derxjs/reducer": "^1.0.24",
+    "@derxjs/view-model": "^1.0.24",
+    "core-js": "^3.6.5",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.3.1",
     "tslib": "^2.0.0",
-    "rxjs": "^7.3.1"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~12.2.0",
+    "@angular-eslint/eslint-plugin": "~12.3.0",
+    "@angular-eslint/eslint-plugin-template": "~12.3.0",
+    "@angular-eslint/template-parser": "~12.3.0",
+    "@angular/compiler-cli": "^12.2.0",
+    "@angular/language-service": "^12.2.0",
+    "@nrwl/angular": "^12.9.0",
     "@nrwl/cli": "12.9.0",
+    "@nrwl/cypress": "12.9.0",
     "@nrwl/eslint-plugin-nx": "12.9.0",
     "@nrwl/jest": "12.9.0",
     "@nrwl/linter": "12.9.0",
     "@nrwl/nx-cloud": "latest",
+    "@nrwl/react": "^12.9.0",
     "@nrwl/tao": "12.9.0",
+    "@nrwl/web": "12.9.0",
     "@nrwl/workspace": "12.9.0",
+    "@testing-library/react": "11.2.6",
+    "@testing-library/react-hooks": "7.0.1",
     "@types/jest": "26.0.24",
     "@types/node": "14.14.33",
     "@types/prompt": "^1.1.1",
+    "@types/react": "17.0.3",
+    "@types/react-dom": "17.0.3",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
+    "cypress": "^8.3.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
     "jest": "27.0.3",
+    "jest-preset-angular": "9.0.7",
     "prettier": "^2.3.1",
     "prompt": "^1.2.0",
     "ts-jest": "27.0.3",
