--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prompt": "^1.2.0",
     "ts-jest": "27.0.3",
     "ts-node": "^10.2.1",
-    "typescript": "~4.3.5"
+    "typescript": "~4.3.5",
+    "webpack-sources": "^3.2.1"
   }
 }
