--- a/package.json
+++ b/package.json
@@ -53,10 +53,15 @@
     "@types/react-dom": "17.0.3",
     "@typescript-eslint/eslint-plugin": "~4.28.3",
     "@typescript-eslint/parser": "~4.28.3",
+    "babel-jest": "27.0.6",
     "cypress": "^8.3.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsx-a11y": "6.4.1",
+    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react-hooks": "4.2.0",
     "jest": "27.0.3",
     "jest-preset-angular": "9.0.7",
     "prettier": "^2.3.1",
