--- a/packages/reducer/package.json
+++ b/packages/reducer/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/ZackDeRose/derxjs#readme",
   "dependencies": {
     "rxjs": "^7.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "@derxjs/view-model": "^1.2.1"
   }
 }
