angular app working

--- a/libs/examples/tic-tac-toe-view-model-implementation/tsconfig.json
+++ b/libs/examples/tic-tac-toe-view-model-implementation/tsconfig.json
@@ -3,7 +3,7 @@
   "files": [],
   "include": [],
   "compilerOptions": {
-    "lib": ["esnext"]
+    "lib": ["esnext", "dom"]
   },
   "references": [
     {
