--- a/packages/react/project.json
+++ b/packages/react/project.json
@@ -17,7 +17,9 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
-      "options": { "lintFilePatterns": ["packages/react/**/*.ts"] }
+      "options": {
+        "lintFilePatterns": ["packages/react/**/*.ts"]
+      }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
