--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@derxjs/react",
   "version": "1.2.6",
-  "main": "dist/packages/reducer/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,7 @@
   },
   "homepage": "https://github.com/ZackDeRose/derxjs#readme",
   "dependencies": {
-    "rxjs": "^7.3.1",
+    "rxjs": "^7.4.0",
     "typescript": "^4.4.3",
     "@derxjs/view-model": "^1.2.1",
     "react": "^17.0.2"
