--- a/packages/reducer/package.json
+++ b/packages/reducer/package.json
@@ -2,7 +2,7 @@
   "name": "@derxjs/reducer",
   "version": "1.2.6",
   "description": "Reducer util library for DeRxJSViewModel Pattern",
-  "main": "dist/packages/reducer/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,7 +21,7 @@
   },
   "homepage": "https://github.com/ZackDeRose/derxjs#readme",
   "dependencies": {
-    "rxjs": "^7.3.1",
+    "rxjs": "^7.4.0",
     "typescript": "^4.4.3",
     "@derxjs/view-model": "^1.2.1"
   }
