exporting react to commonjs

--- a/packages/react/tsconfig.json
+++ b/packages/react/tsconfig.json
@@ -3,6 +3,7 @@
   "files": [],
   "include": [],
   "compilerOptions": {
+    "module": "commonjs",
     "jsx": "react-jsx"
   },
   "references": [
