--- a/package.json
+++ b/package.json
@@ -31,43 +31,44 @@
     "@angular-eslint/template-parser": "~12.3.0",
     "@angular/compiler-cli": "^12.2.0",
     "@angular/language-service": "^12.2.0",
-    "@nrwl/angular": "^12.9.0",
-    "@nrwl/cli": "12.9.0",
-    "@nrwl/cypress": "12.9.0",
-    "@nrwl/devkit": "12.9.0",
-    "@nrwl/eslint-plugin-nx": "12.9.0",
-    "@nrwl/jest": "12.9.0",
-    "@nrwl/linter": "12.9.0",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/react": "^12.9.0",
+    "@nrwl/angular": "13.0.0",
+    "@nrwl/cli": "13.0.0",
+    "@nrwl/cypress": "13.0.0",
+    "@nrwl/devkit": "13.0.0",
+    "@nrwl/eslint-plugin-nx": "13.0.0",
+    "@nrwl/jest": "13.0.0",
+    "@nrwl/linter": "13.0.0",
+    "@nrwl/nx-cloud": "14.0.8",
+    "@nrwl/react": "13.0.0",
     "@nrwl/tao": "12.9.0",
-    "@nrwl/web": "12.9.0",
-    "@nrwl/workspace": "12.9.0",
-    "@testing-library/react": "11.2.6",
-    "@testing-library/react-hooks": "7.0.1",
-    "@types/jest": "26.0.24",
+    "@nrwl/web": "13.0.0",
+    "@nrwl/workspace": "13.0.0",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/react-hooks": "7.0.2",
+    "@types/jest": "27.0.2",
     "@types/node": "14.14.33",
     "@types/prompt": "^1.1.1",
-    "@types/react": "17.0.3",
-    "@types/react-dom": "17.0.3",
-    "@typescript-eslint/eslint-plugin": "~4.28.3",
-    "@typescript-eslint/parser": "~4.28.3",
-    "babel-jest": "27.0.6",
+    "@types/react": "17.0.30",
+    "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "4.33.0",
+    "@typescript-eslint/parser": "4.33.0",
+    "babel-jest": "27.2.3",
     "cypress": "^8.3.0",
-    "eslint": "7.22.0",
+    "eslint": "7.32.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "2.25.2",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.23.1",
+    "eslint-plugin-react": "7.26.1",
     "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "27.0.3",
-    "jest-preset-angular": "9.0.7",
+    "jest": "27.2.3",
+    "jest-preset-angular": "10.0.1",
     "prettier": "^2.3.1",
     "prompt": "^1.2.0",
-    "ts-jest": "27.0.3",
+    "ts-jest": "27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "~4.3.5",
     "webpack-sources": "^3.2.1"
   }
 }
+
