--- a/package.json
+++ b/package.json
@@ -4,71 +4,72 @@
   "license": "MIT",
   "scripts": {
     "publish-packages": "npx ts-node tools/scripts/publish-all.ts",
-    "postinstall": "ngcc --properties es2015 browser module main"
+    "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.0",
-    "@angular/common": "^12.2.0",
-    "@angular/compiler": "^12.2.0",
-    "@angular/core": "^12.2.0",
-    "@angular/forms": "^12.2.0",
-    "@angular/platform-browser": "^12.2.0",
-    "@angular/platform-browser-dynamic": "^12.2.0",
-    "@angular/router": "^12.2.0",
+    "@angular/animations": "14.0.1",
+    "@angular/common": "14.0.1",
+    "@angular/compiler": "14.0.1",
+    "@angular/core": "14.0.1",
+    "@angular/forms": "14.0.1",
+    "@angular/platform-browser": "14.0.1",
+    "@angular/platform-browser-dynamic": "14.0.1",
+    "@angular/router": "14.0.1",
     "core-js": "^3.6.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-is": "18.0.0",
     "regenerator-runtime": "0.13.7",
     "rxjs": "^7.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.0",
-    "@angular-eslint/eslint-plugin": "~12.3.0",
-    "@angular-eslint/eslint-plugin-template": "~12.3.0",
-    "@angular-eslint/template-parser": "~12.3.0",
-    "@angular/compiler-cli": "^12.2.0",
-    "@angular/language-service": "^12.2.0",
-    "@nrwl/angular": "13.0.0",
-    "@nrwl/cli": "13.0.0",
-    "@nrwl/cypress": "13.0.0",
-    "@nrwl/devkit": "13.0.0",
-    "@nrwl/eslint-plugin-nx": "13.0.0",
-    "@nrwl/jest": "13.0.0",
-    "@nrwl/linter": "13.0.0",
+    "@angular-devkit/build-angular": "14.0.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/compiler-cli": "14.0.1",
+    "@angular/language-service": "14.0.1",
+    "@nrwl/angular": "14.2.4",
+    "@nrwl/cli": "14.2.4",
+    "@nrwl/cypress": "14.2.4",
+    "@nrwl/devkit": "14.2.4",
+    "@nrwl/eslint-plugin-nx": "14.2.4",
+    "@nrwl/jest": "14.2.4",
+    "@nrwl/js": "14.2.4",
+    "@nrwl/linter": "14.2.4",
     "@nrwl/nx-cloud": "14.0.8",
-    "@nrwl/react": "13.0.0",
-    "@nrwl/tao": "12.9.0",
-    "@nrwl/web": "13.0.0",
-    "@nrwl/workspace": "13.0.0",
-    "@testing-library/react": "12.1.2",
-    "@testing-library/react-hooks": "7.0.2",
-    "@types/jest": "27.0.2",
-    "@types/node": "14.14.33",
+    "@nrwl/react": "14.2.4",
+    "@nrwl/web": "14.2.4",
+    "@nrwl/workspace": "14.2.4",
+    "@testing-library/react": "13.3.0",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.41",
     "@types/prompt": "^1.1.1",
-    "@types/react": "17.0.30",
-    "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "4.33.0",
-    "@typescript-eslint/parser": "4.33.0",
-    "babel-jest": "27.2.3",
+    "@types/react": "18.0.12",
+    "@types/react-dom": "18.0.5",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
+    "babel-jest": "27.5.1",
     "cypress": "^8.3.0",
-    "eslint": "7.32.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.25.2",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.26.1",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "jest": "27.2.3",
-    "jest-preset-angular": "10.0.1",
-    "prettier": "^2.3.1",
+    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react-hooks": "4.5.0",
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.2",
+    "nx": "14.2.4",
+    "prettier": "2.6.2",
     "prompt": "^1.2.0",
-    "ts-jest": "27.0.5",
-    "ts-node": "^10.2.1",
-    "typescript": "~4.3.5",
+    "react-test-renderer": "18.0.0",
+    "ts-jest": "27.1.4",
+    "ts-node": "10.8.1",
+    "typescript": "4.7.3",
     "webpack-sources": "^3.2.1"
   }
 }
-
