--- a/apps/examples/angular/tic-tac-toe-e2e/project.json
+++ b/apps/examples/angular/tic-tac-toe-e2e/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "apps/examples/angular/tic-tac-toe-e2e",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/examples/angular/tic-tac-toe-e2e/src",
   "projectType": "application",
   "targets": {
@@ -17,7 +17,9 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
         "lintFilePatterns": [
           "apps/examples/angular/tic-tac-toe-e2e/**/*.{js,ts}"
@@ -26,5 +28,7 @@
     }
   },
   "tags": [],
-  "implicitDependencies": ["examples-angular-tic-tac-toe"]
+  "implicitDependencies": [
+    "examples-angular-tic-tac-toe"
+  ]
 }
