--- a/libs/examples/list-view-model-implementation/project.json
+++ b/libs/examples/list-view-model-implementation/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/examples/list-view-model-implementation",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/examples/list-view-model-implementation/src",
   "projectType": "library",
   "targets": {
@@ -16,7 +16,7 @@
       "executor": "@nrwl/jest:jest",
       "outputs": ["coverage/libs/examples/list-view-model-implementation"],
       "options": {
-        "jestConfig": "libs/examples/list-view-model-implementation/jest.config.js",
+        "jestConfig": "libs/examples/list-view-model-implementation/jest.config.ts",
         "passWithNoTests": true
       }
     }
