--- a/libs/examples/tic-tac-toe-view-model-implementation/project.json
+++ b/libs/examples/tic-tac-toe-view-model-implementation/project.json
@@ -1,5 +1,5 @@
 {
-  "root": "libs/examples/tic-tac-toe-view-model-implementation",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/examples/tic-tac-toe-view-model-implementation/src",
   "projectType": "library",
   "targets": {
@@ -18,7 +18,7 @@
         "coverage/libs/examples/tic-tac-toe-view-model-implementation"
       ],
       "options": {
-        "jestConfig": "libs/examples/tic-tac-toe-view-model-implementation/jest.config.js",
+        "jestConfig": "libs/examples/tic-tac-toe-view-model-implementation/jest.config.ts",
         "passWithNoTests": true
       }
     }
