--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -21,8 +21,8 @@
   "homepage": "https://github.com/ZackDeRose/derxjs#readme",
   "dependencies": {
     "rxjs": "^7.4.0",
-    "typescript": "^4.4.3",
+    "typescript": "4.7.3",
     "@derxjs/view-model": "^1.2.1",
-    "react": "^17.0.2"
+    "react": "18.1.0"
   }
 }
