--- a/packages/reducer/package.json
+++ b/packages/reducer/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/ZackDeRose/derxjs#readme",
   "dependencies": {
     "rxjs": "^7.4.0",
-    "typescript": "^4.4.3",
+    "typescript": "4.7.3",
     "@derxjs/view-model": "^1.2.1"
   }
 }
