--- a/libs/examples/list-view-model-implementation/project.json
+++ b/libs/examples/list-view-model-implementation/project.json
@@ -1,10 +1,11 @@
 {
+  "name": "examples-list-view-model-implementation",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "libs/examples/list-view-model-implementation/src",
   "projectType": "library",
   "targets": {
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
@@ -13,8 +14,10 @@
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/examples/list-view-model-implementation"],
+      "executor": "@nx/jest:jest",
+      "outputs": [
+        "{workspaceRoot}/coverage/libs/examples/list-view-model-implementation"
+      ],
       "options": {
         "jestConfig": "libs/examples/list-view-model-implementation/jest.config.ts",
         "passWithNoTests": true
