--- a/apps/examples/angular/list-e2e/project.json
+++ b/apps/examples/angular/list-e2e/project.json
@@ -1,10 +1,11 @@
 {
+  "name": "examples-angular-list-e2e",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/examples/angular/list-e2e/src",
   "projectType": "application",
   "targets": {
     "e2e": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@nx/cypress:cypress",
       "options": {
         "cypressConfig": "apps/examples/angular/list-e2e/cypress.json",
         "devServerTarget": "examples-angular-list:serve:development"
@@ -16,19 +17,13 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "apps/examples/angular/list-e2e/**/*.{js,ts}"
-        ]
+        "lintFilePatterns": ["apps/examples/angular/list-e2e/**/*.{js,ts}"]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "examples-angular-list"
-  ]
+  "implicitDependencies": ["examples-angular-list"]
 }
