--- a/apps/examples/angular/list/project.json
+++ b/apps/examples/angular/list/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "examples-angular-list",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/examples/angular/list/src",
@@ -73,7 +74,7 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
+      "executor": "@nx/linter:eslint",
       "options": {
         "lintFilePatterns": [
           "apps/examples/angular/list/src/**/*.ts",
@@ -82,8 +83,8 @@
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/examples/angular/list"],
+      "executor": "@nx/jest:jest",
+      "outputs": ["{workspaceRoot}/coverage/apps/examples/angular/list"],
       "options": {
         "jestConfig": "apps/examples/angular/list/jest.config.ts",
         "passWithNoTests": true
