--- a/apps/examples/angular/tic-tac-toe-e2e/project.json
+++ b/apps/examples/angular/tic-tac-toe-e2e/project.json
@@ -1,10 +1,11 @@
 {
+  "name": "examples-angular-tic-tac-toe-e2e",
   "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/examples/angular/tic-tac-toe-e2e/src",
   "projectType": "application",
   "targets": {
     "e2e": {
-      "executor": "@nrwl/cypress:cypress",
+      "executor": "@nx/cypress:cypress",
       "options": {
         "cypressConfig": "apps/examples/angular/tic-tac-toe-e2e/cypress.json",
         "devServerTarget": "examples-angular-tic-tac-toe:serve:development"
@@ -16,10 +17,8 @@
       }
     },
     "lint": {
-      "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "executor": "@nx/linter:eslint",
+      "outputs": ["{options.outputFile}"],
       "options": {
         "lintFilePatterns": [
           "apps/examples/angular/tic-tac-toe-e2e/**/*.{js,ts}"
@@ -28,7 +27,5 @@
     }
   },
   "tags": [],
-  "implicitDependencies": [
-    "examples-angular-tic-tac-toe"
-  ]
+  "implicitDependencies": ["examples-angular-tic-tac-toe"]
 }
