--- a/package.json
+++ b/package.json
@@ -3,73 +3,80 @@
   "version": "1.3.0",
   "license": "MIT",
   "scripts": {
-    "publish-packages": "npx ts-node tools/scripts/publish-all.ts",
-    "postinstall": "ngcc --properties es2020 browser module main"
+    "publish-packages": "npx ts-node tools/scripts/publish-all.ts"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "14.0.1",
-    "@angular/common": "14.0.1",
-    "@angular/compiler": "14.0.1",
-    "@angular/core": "14.0.1",
-    "@angular/forms": "14.0.1",
-    "@angular/platform-browser": "14.0.1",
-    "@angular/platform-browser-dynamic": "14.0.1",
-    "@angular/router": "14.0.1",
+    "@angular/animations": "16.1.9",
+    "@angular/common": "16.1.9",
+    "@angular/compiler": "16.1.9",
+    "@angular/core": "16.1.9",
+    "@angular/forms": "16.1.9",
+    "@angular/platform-browser": "16.1.9",
+    "@angular/platform-browser-dynamic": "16.1.9",
+    "@angular/router": "16.1.9",
+    "@swc/helpers": "~0.5.0",
     "core-js": "^3.6.5",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
-    "react-is": "18.0.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-is": "18.2.0",
     "regenerator-runtime": "0.13.7",
-    "rxjs": "^7.4.0",
-    "tslib": "^2.0.0",
-    "zone.js": "0.11.5"
+    "rxjs": "7.8.1",
+    "tslib": "^2.3.0",
+    "zone.js": "0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.0.1",
-    "@angular-eslint/eslint-plugin": "13.2.1",
-    "@angular-eslint/eslint-plugin-template": "13.2.1",
-    "@angular-eslint/template-parser": "13.2.1",
-    "@angular/compiler-cli": "14.0.1",
-    "@angular/language-service": "14.0.1",
-    "@nrwl/angular": "14.2.4",
-    "@nrwl/cli": "14.2.4",
-    "@nrwl/cypress": "14.2.4",
-    "@nrwl/devkit": "14.2.4",
-    "@nrwl/eslint-plugin-nx": "14.2.4",
-    "@nrwl/jest": "14.2.4",
-    "@nrwl/js": "14.2.4",
-    "@nrwl/linter": "14.2.4",
-    "@nrwl/nx-cloud": "14.0.8",
-    "@nrwl/react": "14.2.4",
-    "@nrwl/web": "14.2.4",
-    "@nrwl/workspace": "14.2.4",
-    "@testing-library/react": "13.3.0",
-    "@types/jest": "27.4.1",
-    "@types/node": "17.0.41",
+    "@angular-devkit/build-angular": "16.1.8",
+    "@angular-devkit/core": "16.1.8",
+    "@angular-devkit/schematics": "16.1.8",
+    "@angular-eslint/eslint-plugin": "16.0.3",
+    "@angular-eslint/eslint-plugin-template": "16.0.3",
+    "@angular-eslint/template-parser": "16.0.3",
+    "@angular/compiler-cli": "16.1.9",
+    "@angular/language-service": "16.1.9",
+    "@nrwl/js": "16.6.0",
+    "@nx/cypress": "16.6.0",
+    "@nx/devkit": "16.6.0",
+    "@nx/eslint-plugin": "16.6.0",
+    "@nx/jest": "16.6.0",
+    "@nx/js": "16.6.0",
+    "@nx/linter": "16.6.0",
+    "@nx/plugin": "16.6.0",
+    "@nx/react": "16.6.0",
+    "@nx/web": "16.6.0",
+    "@nx/workspace": "16.6.0",
+    "@schematics/angular": "16.1.8",
+    "@swc-node/register": "~1.4.2",
+    "@swc/cli": "~0.1.62",
+    "@swc/core": "~1.3.51",
+    "@testing-library/react": "14.0.0",
+    "@types/jest": "29.4.4",
+    "@types/node": "18.14.2",
     "@types/prompt": "^1.1.1",
-    "@types/react": "18.0.12",
-    "@types/react-dom": "18.0.5",
-    "@typescript-eslint/eslint-plugin": "5.24.0",
-    "@typescript-eslint/parser": "5.24.0",
-    "babel-jest": "27.5.1",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "@typescript-eslint/eslint-plugin": "5.62.0",
+    "@typescript-eslint/parser": "5.62.0",
+    "babel-jest": "29.4.3",
     "cypress": "^8.3.0",
     "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.30.0",
-    "eslint-plugin-react-hooks": "4.5.0",
-    "jest": "27.5.1",
-    "jest-preset-angular": "11.1.2",
-    "nx": "14.2.4",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "jest": "29.4.3",
+    "jest-environment-jsdom": "^29.4.1",
+    "jest-preset-angular": "13.1.1",
+    "nx": "16.6.0",
+    "nx-cloud": "16.3.0",
     "prettier": "2.6.2",
     "prompt": "^1.2.0",
-    "react-test-renderer": "18.0.0",
-    "ts-jest": "27.1.4",
-    "ts-node": "10.8.1",
-    "typescript": "4.7.3",
-    "webpack-sources": "^3.2.1"
+    "ts-jest": "29.1.1",
+    "ts-node": "10.9.1",
+    "typescript": "5.1.6",
+    "webpack-sources": "^3.2.1",
+    "@nx/angular": "16.6.0"
   }
 }
